--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,19 @@
-<p>navbar works!</p>
+
+<nav class="navbar navbar-expand-sm bg-light navbar-light">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+        <a class="nav-link" routerLink="/index">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link"  routerLink="/login">Log In</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link"  (click)="logout()" routerLink="/index">Log Out</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link"    routerLink="/account">Account</a>
+    </li>
+
+  </ul>
+</nav>
+<router-outlet></router-outlet>
