--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
   <ul class="navbar-nav">
     <li class="nav-item">
-        <a class="nav-link" routerLink="/index">Home</a>
+        <a class="nav-link" routerLink="/">Home</a>
     </li>
     <li class="nav-item">
         <a class="nav-link"  routerLink="/login">Log In</a>
@@ -16,4 +16,4 @@
 
   </ul>
 </nav>
-<router-outlet></router-outlet>
+
