$(git branch-name): miscellaneous updates

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,13 +5,13 @@
         <a class="nav-link" routerLink="/">Home</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link"  routerLink="/login">Log In</a>
+        <a class="nav-link" *ngIf="!dbService.loggedIn" routerLink="/login">Log In</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link"  (click)="logout()" routerLink="/index">Log Out</a>
+      <a class="nav-link" *ngIf="dbService.loggedIn" (click)="logout()" routerLink="/index">Log Out</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link"    routerLink="/account">Account</a>
+        <a class="nav-link" *ngIf="dbService.loggedIn"  routerLink="/account">Account</a>
     </li>
 
   </ul>
