--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -5,8 +5,7 @@
     <div class="form-group">
       <label for="username">User Name</label>
       <input type="text" class="form-control" name="username" id="username" placeholder="Enter user name" ngModel required #username="ngModel" >
-      <button type="text" class="form-control btn btn-primary" name="namecheck" id="namecheck" (ngClick)="nameCheck(f)"  >Check if Unique</button>
-
+      <button type="text" class="form-control btn btn-primary" name="namecheck" id="namecheck" (click)="nameCheck(f)"  >Check if Unique</button>
     </div>
     <div class="form-group">
       <label for="password1">Password</label>
