--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -1,8 +1,8 @@
-<h3>Top Heroes</h3>
+<h3>Welcome {{dbService.loggedInUser}}!</h3>
 <div class="grid grid-pad">
-  <div *ngFor="let hero of heroes" (click)="gotoDetail(hero)" class="col-1-4">
-    <div class="module hero">
-      <h4>{{hero.name}}</h4>
+  <div *ngFor="let group of groups" (click)="gotoDetail(group)" class="col-1-4">
+    <div class="module group">
+      <h4>{{group.name}}</h4>
     </div>
   </div>
 </div>
