develop: successful build

--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -1,8 +1,1 @@
-<h3>Welcome {{dbService.loggedInUser}}!</h3>
-<div class="grid grid-pad">
-  <div *ngFor="let group of groups" (click)="gotoDetail(group)" class="col-1-4">
-    <div class="module group">
-      <h4>{{group.name}}</h4>
-    </div>
-  </div>
-</div>
+asdfasfda
