--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,16 +4,16 @@
       <a class="nav-link" routerLink="/">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" style='cursor:pointer' *ngIf="dbService.loggedInUser" routerLink="/account">Account</a>
+      <a class="nav-link" style='cursor:pointer' *ngIf="loggedInUser" routerLink="/account">Account</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" style='cursor:pointer' *ngIf="!dbService.loggedInUser" (click)="login()">Log In</a>
+      <a class="nav-link" style='cursor:pointer' *ngIf="!loggedInUser" (click)="login()">Log In</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" style='cursor:pointer' *ngIf="!dbService.loggedInUser" (click)="register()">Register</a>
+      <a class="nav-link" style='cursor:pointer' *ngIf="!loggedInUser" (click)="register()">Register</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" style='cursor:pointer' *ngIf="dbService.loggedInUser" (click)="logout()">Log Out</a>
+      <a class="nav-link" style='cursor:pointer' *ngIf="loggedInUser" (click)="logout()">Log Out</a>
     </li>
   </ul>
 </nav>
