--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,9 +4,12 @@
       <a class="nav-link" routerLink="/">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" style='cursor:pointer' *ngIf="loggedInUser" routerLink="/account">Account</a>
-    </li>
-    <li class="nav-item">
+        <a class="nav-link" style='cursor:pointer' *ngIf="loggedInUser" routerLink="/account">Account</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" style='cursor:pointer'  routerLink="/group-detail">Create a Group</a>
+        </li>
+          <li class="nav-item">
       <a class="nav-link" style='cursor:pointer' *ngIf="!loggedInUser" (click)="login()">Log In</a>
     </li>
     <li class="nav-item">
