develop: get ngFor to work in group-detail

--- a/src/app/components/detail/group-detail/group-detail.component.html
+++ b/src/app/components/detail/group-detail/group-detail.component.html
@@ -8,20 +8,19 @@
       <label for="name">name</label>
       <input type="text" class="form-control" name="name" name="name" [(ngModel)]="group.name" >
     </div>
-    <div ngbDropdown class="d-inline-block">
-      <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Toggle dropdown</button>
-      <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-        <button ngbDropdownItem>group</button>
-        <button ngbDropdownItem>channel</button>
-        <button ngbDropdownItem>member</button>
-        <button ngbDropdownItem>message</button>
-        <button ngbDropdownItem>product</button>
-      </div>
-    </div>
-    <div class="form-group">
+
+    <!-- <div class="form-group">
       <label for="type">type</label>
       <input type="text" class="form-control" name="type" type="type" [(ngModel)]="group.type" >
+    </div> -->
+
+    <div class="form-group">
+      <label for="type">type</label>
+      <select class="form-control" id="type" name="type">
+        <option *ngFor="let type of types" [value]="type">{{type}}</option>
+      </select>
     </div>
+
     <div class="form-group">
       <label for="parent">parent</label>
       <input type="text" class="form-control" name="parent" parent="parent" [(ngModel)]="group.parent" >
@@ -34,6 +33,11 @@
           <button type="text"  name="submitbutton" id="submitbutton"   class="btn btn-primary" >Submit</button>
         </div>
 </form>
+
+<div class="cart-item" *ngFor="let type of types">
+  <span>asd </span>
+  <span>assad</span>
+</div>
   </div>
 
 
