--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,6 +13,9 @@
         <a class="nav-link" style='cursor:pointer'  routerLink="/chat">Chat</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" style='cursor:pointer'  routerLink="/sockettest">sockettest</a>
+      </li>
+      <li class="nav-item">
       <a class="nav-link" style='cursor:pointer' *ngIf="!loggedInUser" (click)="login()">Log In</a>
     </li>
     <li class="nav-item">
