develop: minor bugfix

--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -11,7 +11,7 @@
   </form>
 <h3>Chat Message</h3>
 <ul>
-  <li *ngFor="let message of messages">{{message}}</li>
+  <li *ngFor="let messagecontent of messagescontent">{{messagecontent}}</li>
 </ul>
 
 </div>
