develop: deploying to prod

--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -10,8 +10,12 @@
     </div>
   </form>
 <h3>Chat Message</h3>
-<ul>
-  <li *ngFor="let messagecontent of messagescontent">{{messagecontent}}</li>
-</ul>
+
+
+<div class="card" *ngFor="let messagecontent of messagescontent">
+  <div class="card-body">
+    {{messagecontent}}
+  </div>
+</div>
 
 </div>
