--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -18,6 +18,7 @@
             <p name="form-notice" id="form-notice" style="color:red">login failed</p>
         </div>
     </form>
+    <div>{{loginResult}}</div>
   </div>
 
 
