--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         <a class="nav-link" style='cursor:pointer'  routerLink="/group-detail">Create a Group</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" style='cursor:pointer'   [routerLink]="['/chat','group','channel','member']">Chat</a>
+        <a class="nav-link" style='cursor:pointer'   [routerLink]="['/chat','group1','channel1','admin']">Chat</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" style='cursor:pointer'  routerLink="/sockettest">sockettest</a>
