--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,7 +14,7 @@
       <div class="form-group">
           <button type="text"  name="submitbutton" id="submitbutton" (click)="login()"  class="btn btn-primary" >Submit</button>
         </div>
-        <div class="form-group" *ngIf="showError">
+        <div class="form-group" *ngIf="error">
             <p name="form-notice" id="form-notice" style="color:red">login failed</p>
         </div>
     </form>
