develop: minor bugfix

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,12 @@
 <div class="container text-center">
+<div>
+  <br>
+  <h4 class="mx-auto display-1" style="color:rgb(19, 19, 148);">3813-ICT Chat</h4>
 
-  <h1 class="mx-auto" style="font-size:200px; color:rgb(19, 19, 148);">Chat</h1>
+</div>
+<div>
+
+  </div>
+
 
 </div>
