--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,44 @@
 <div class="container text-center">
 <div>
   <br>
-  <h4 class="mx-auto display-1" style="color:rgb(19, 19, 148);">3813-ICT Chat</h4>
+  <h4 class="mx-auto display-2" style="color:rgb(19, 19, 148); font-size: 1em">Workshop9</h4>
+
+  <br>
+  <br>
 
 </div>
+
 <div>
 
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col" hidden=true>_id</th>
+            <th scope="col">Id</th>
+            <th scope="col">Name</th>
+            <th scope="col">Description</th>
+            <th scope="col">Price</th>
+            <th scope="col">Units</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
+          </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let product of products">
+              <td hidden=true>{{ product._id }}</td>
+              <th scope="row">{{ product.Id }}</th>
+              <td>{{ product.Name }}</td>
+              <td>{{ product.Description }}</td>
+              <td>{{ product.Price }}</td>
+              <td>{{ product.Units }}</td>
+              <td><button type="button" in="edit" name="edit" class="btn btn-info" (click)="edit(product)">Edit</button></td>
+              <td><button type="button" in="delete" name="delete" class="btn btn-warning" (click)="edit(product)">Delete</button></td>
+           </tr>
+        </tbody>
+      </table>
+
+  
   </div>
-
-
 </div>
+
+
