--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,19 +4,11 @@
       <a class="nav-link" routerLink="/">Home</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" style='cursor:pointer' *ngIf="controllerService.loggedIn" routerLink="/member">Account</a>
+        <a class="nav-link" style='cursor:pointer' routerLink="/member">Add</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" style='cursor:pointer' *ngIf="controllerService.loggedIn" routerLink="/group-detail">Create a Group</a>
+        <a class="nav-link" style='cursor:pointer'   [routerLink]="['/chat','group1','channel1','admin']">Edit</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" style='cursor:pointer'  *ngIf="controllerService.loggedIn" [routerLink]="['/chat','group1','channel1','admin']">Chat</a>
-      </li>
-      <li class="nav-item">
-      <a class="nav-link" style='cursor:pointer' *ngIf="!controllerService.loggedIn" [routerLink]="['/login']">Log In</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" style='cursor:pointer' *ngIf="controllerService.loggedIn" [routerLink]="['/login']">Log Out</a>
-    </li>
+
   </ul>
 </nav>
