week9: minor bugfix

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,10 +4,10 @@
       <a class="nav-link" routerLink="/">Home</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" style='cursor:pointer' routerLink="/member">Add</a>
+        <a class="nav-link" style='cursor:pointer' routerLink="/add">Add</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" style='cursor:pointer'   [routerLink]="['/chat','group1','channel1','admin']">Edit</a>
+        <a class="nav-link" style='cursor:pointer'   routerLink="/edit">Edit</a>
       </li>
 
   </ul>
