--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -31,7 +31,8 @@
               <td>{{ product.Description }}</td>
               <td>{{ product.Price }}</td>
               <td>{{ product.Units }}</td>
-              <td><button type="button" in="edit" name="edit" class="btn btn-info" (click)="edit(product)">Edit</button></td>
+              <td><button type="button" in="edit" name="edit" class="btn btn-info" [routerLink]="['/edit', product._id]">Edit</button></td>
+              <!-- <td><button type="button" in="edit" name="edit" class="btn btn-info " (click)="edit(product)" >Edit</button></td> -->
               <td><button type="button" in="delete" name="delete" class="btn btn-warning" (click)="edit(product)">Delete</button></td>
            </tr>
         </tbody>
