--- a/src/app/components/edit/edit.component.html
+++ b/src/app/components/edit/edit.component.html
@@ -1,10 +1,14 @@
 <div class="col-md-6" style="margin:3rem">
-        <form id="groupdetailform" name="groupdetailform" class="container-fluid" (ngSubmit)="submit()" novalidate>
-          <div class="form-group">
-            <label for="Id">Id</label>
-            <input type="text" class="form-control" name="Id" id="Id" [(ngModel)]="product.Id" >
-          </div>
-      
+        <form id="groupdetailform" name="groupdetailform" class="container-fluid" (submit)="submit()" novalidate>
+            <div class="form-group" >
+                <label for="Id">_id</label>
+                <input type="text" class="form-control" name="_id" id="_id" [(ngModel)]="product._id" readonly>
+              </div>
+              <div class="form-group" >
+                  <label for="Id">Id</label>
+                  <input type="text" class="form-control" name="Id" id="Id" [(ngModel)]="product.Id" readonly>
+                </div>
+                
           <div class="form-group">
             <label for="type">Name</label>
             <input type="text" class="form-control" name="Name" id="Name" type="type" [(ngModel)]="product.Name" >
@@ -30,4 +34,5 @@
       </form>
       
         </div>
+       
       
