--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,6 +13,7 @@
     <table class="table">
         <thead>
           <tr>
+            <th scope="col" hidden>_id</th>
             <th scope="col">Id</th>
             <th scope="col">Name</th>
             <th scope="col">Description</th>
@@ -23,20 +24,38 @@
           </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let product of products">
+            <tr *ngFor="let product of controllerService.products">
+              <td hidden>{{ product._id }}</td>
               <th scope="row">{{ product.Id }}</th>
               <td>{{ product.Name }}</td>
               <td>{{ product.Description }}</td>
               <td>{{ product.Price }}</td>
               <td>{{ product.Units }}</td>
-              <td><button type="button" in="edit" name="edit" class="btn btn-info" [routerLink]="['/edit', product._id]">Edit</button></td>
+              <td><button type="button" in="edit" name="edit" class="btn btn-warning" [routerLink]="['/edit', product._id]">Edit</button></td>
               <!-- <td><button type="button" in="edit" name="edit" class="btn btn-info " (click)="edit(product)" >Edit</button></td> -->
-              <td><button type="button" in="delete" name="delete" class="btn btn-warning" (click)="edit(product)">Delete</button></td>
+              <td><button type="button" in="delete" name="delete" class="btn btn-danger" data-toggle="modal" (click)="controllerService.deleteProduct(product._id)" >Delete</button></td>
            </tr>
         </tbody>
       </table>
-
-  
+<!-- Modal -->
+<div id="myModal" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Delete?</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Are you sure?</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" >Delete</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
