week9: minor bugfix

--- a/src/app/components/add/add.component.html
+++ b/src/app/components/add/add.component.html
@@ -1,10 +1,10 @@
 <div class="col-md-6" style="margin:3rem">
     <form id="groupdetailform" name="groupdetailform" class="container-fluid" (submit)="submit()" novalidate>
-        <div class="form-group" >
+        <div class="d-none" class="form-group" >
             <label for="Id">_id</label>
             <input type="text" class="form-control" name="_id" id="_id" [(ngModel)]="product._id" readonly>
           </div>
-          <div class="form-group" >
+          <div class="d-none" class="form-group" >
               <label for="Id">Id</label>
               <input type="text" class="form-control" name="Id" id="Id" [(ngModel)]="product.Id" readonly>
             </div>
