--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<div class="container text-center" *ngIf="products">
 <div>
   <br>
   <h4 class="mx-auto display-2" style="color:rgb(19, 19, 148); font-size: 1em">Workshop9</h4>
@@ -13,8 +13,8 @@
     <table class="table">
         <thead>
           <tr>
-            <th scope="col" >_id</th>
-            <th scope="col">Id</th>
+            <th class="d-none" scope="col" >_id</th>
+            <th class="d-none" scope="col">Id</th>
             <th scope="col">Name</th>
             <th scope="col">Description</th>
             <th scope="col">Price</th>
@@ -25,18 +25,22 @@
         </thead>
         <tbody>
             <tr *ngFor="let product of products">
-              <td >{{ product._id }}</td>
-              <th scope="row">{{ product.Id }}</th>
+              <td class="d-none">{{ product._id }}</td>
+              <th class="d-none" scope="row">{{ product.Id }}</th>
               <td>{{ product.Name }}</td>
               <td>{{ product.Description }}</td>
               <td>{{ product.Price }}</td>
               <td>{{ product.Units }}</td>
-              <td><button type="button" id="edit" name="edit" class="btn btn-primary" (click)="onSelect(product)">Edit</button></td>
+              <td><button type="button" id="edit" name="edit" class="btn btn-primary" [routerLink]="['/edit', product._id]">Edit</button></td>
               <!-- <td><button type="button" in="edit" name="edit" class="btn btn-info " (click)="edit(product)" >Edit</button></td> -->
               <td><button type="button" id="delete" name="delete" class="btn btn-warning" (click)="deleteProduct(product)" >Delete</button></td>
            </tr>
         </tbody>
       </table>
+      <div class="d-flex justify-content-end">
+          <button type="button" id="add" name="add" class="btn btn-success tfoot" [routerLink]="['/add']">Add</button>
+      </div>
+      
 <!-- Modal -->  
 <div id="myModal" class="modal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
